objects/agf__ADM_Burndown_Item__c.object
<CustomObject>
    <fields>
        <fullName>agf__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Days_Remaining__c</fullName>
        <description>Stores the days remaining in the current sprint. Do not modify by hand as this is used by Apex for burndown calculation.</description>
        <label>Days Remaining</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Hours_Remaining__c</fullName>
        <label>Hours Remaining</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Points_Remaining__c</fullName>
        <label>Points_Remaining</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scrum Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Burndown Items</relationshipLabel>
        <relationshipName>Burndown_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Sprint__c</fullName>
        <label>Sprint</label>
        <referenceTo>agf__ADM_Sprint__c</referenceTo>
        <relationshipLabel>Burndown Items</relationshipLabel>
        <relationshipName>Burndown_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>agf__Task_ID__c</fullName>
        <label>Task ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Task__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  agf__Task_ID__c , &quot;TASK&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baseline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Upsert_Key__c</fullName>
        <description>This field value will uniquely identify a burndown item using the following format: &lt;SPRINT_ID&gt;&lt;YYYYMMDD&gt;&lt;A/B&gt; Where &lt;A/B&gt; indicates whether it&apos;s the Actual or the Baseline figure</description>
        <externalId>true</externalId>
        <label>Upsert Key</label>
        <length>27</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Work__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work</label>
        <referenceTo>agf__ADM_Work__c</referenceTo>
        <relationshipLabel>Burndown Items</relationshipLabel>
        <relationshipName>Burndown_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Burndown Item</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>agf__Date__c</columns>
        <columns>agf__Days_Remaining__c</columns>
        <columns>agf__Hours_Remaining__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>agf__Sprint__c</columns>
        <columns>agf__Task__c</columns>
        <columns>agf__Task_ID__c</columns>
        <columns>agf__Type__c</columns>
        <columns>agf__Work__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BDI-{000000000}</displayFormat>
        <label>Burndown Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Burndown Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>